syntax="proto3";

package file_provider;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/IskanderSh/tages-task/proto";

service FileProvider {
  rpc UploadFile (stream UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile (DownloadFileRequest) returns (stream DownloadFileResponse);
  rpc FetchFiles (google.protobuf.Empty) returns (FetchFilesResponse);
}

message File {
  int64 id = 1;
  string file_name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message UploadFileRequest {
  string file_name = 1;
  bytes content = 2;
}

message UploadFileResponse {
  string file_name = 1;
}

message DownloadFileRequest {
  string file_name = 1;
}

message DownloadFileResponse {
  bytes content = 1;
}

message FetchFilesResponse {
  repeated File data = 1;
}
